--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "deploy": "bash deploy.sh"
   },
   "devDependencies": {
+    "@vuepress/plugin-medium-zoom": "^1.0.0-rc.1",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
     "vuepress": "^1.0.3"
   },
   "dependencies": {
