--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "vuepress": "^1.0.3"
   },
   "dependencies": {
-    "vue-property-decorator": "^8.2.2",
-    "vuepress-theme-reco": "^1.0.4"
+    "vue-property-decorator": "^8.2.2"
   }
 }
