--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "vuepress": "^1.0.3"
   },
   "dependencies": {
-    "vue-property-decorator": "^8.2.2"
+    "vue-property-decorator": "^8.2.2",
+    "vuepress-theme-reco": "^1.1.1",
+    "vuepress-theme-secondary_element": "^1.0.1"
   }
 }
