--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
-    "vuepress": "^1.0.3",
-    "vuepress-theme-secondary_element": "^1.0.4"
+    "vuepress": "^1.0.3"
   }
 }
